# AutoFixer

./: .gitignore  .gitmodules  README.md  pyproject.toml
autofixer/: __init__.py  context_snapshot.py
autofixer/env_interceptor/: __init__.py  frame_inspector.py  sys_excepthook.py
autofixer/model/: __init__.py  bugfix_agent.py
autofixer/optim/: __init__.py  apply_patch.py
autofixer/tools/: __init__.py  git_miner.py
scripts/: demo_buggy.py  demo_context.json  run_repl.py  test_e2e_autograd.py
tests/: test_apply_patch.py  test_bugfix_agent.py  test_context_snapshot.py  test_env_interceptor.py  test_git_miner.py
