[project]
name = "autofixer"
version = "0.1.0"
description = "Experience-based Bug Fix Agent built on symbolic tensor architecture"
requires-python = ">=3.10"
dependencies = [
    "torch>=2.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0",
    "pytest-cov",
]

[tool.setuptools.packages.find]
include = ["autofixer*"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["."]
